--- a/.github/workflows/cpp_linter.yml
+++ b/.github/workflows/cpp_linter.yml
@@ -7,6 +7,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+      - name: Configure CMake
+        run: cmake . -DCMAKE_EXPORT_COMPILE_COMMANDS=on
       - uses: cpp-linter/cpp-linter-action@v2.7.5
         id: linter
         env:
