--- a/.github/workflows/cpp_linter.yml
+++ b/.github/workflows/cpp_linter.yml
@@ -4,9 +4,30 @@ on: pull_request
 
 jobs:
   cpp-linter:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04  # Match the version used in BuildAndTestNix for consistency
     steps:
       - uses: actions/checkout@v3
+        with:
+          submodules: true  # Assuming you also want to check out submodules for linting
+
+      # Add the Install Dependencies step from the BuildAndTestNix workflow
+      - name: Install Dependencies
+        run: |
+          sudo apt-add-repository -y "ppa:ubuntu-toolchain-r/test"
+          sudo apt-get update
+          sudo apt-get -yq --no-install-suggests --no-install-recommends install gcc-7 g++-7 valgrind
+          # Add any other dependencies your project may need here
+
+      # Add the CMake build step to generate the compilation database
+      - name: Generate Compilation Database
+        run: |
+          mkdir build
+          cd build
+          cmake -DCMAKE_BUILD_TYPE=${{ env.BUILD_TYPE }} -DCMAKE_EXPORT_COMPILE_COMMANDS=ON ..
+          # You might need additional CMake options depending on your project
+        env:
+          BUILD_TYPE: Release  # Or Debug, or whatever you need
+
       - uses: cpp-linter/cpp-linter-action@v2.7.5
         id: linter
         env:
@@ -16,14 +37,8 @@ jobs:
           tidy-checks: ''
           lines-changed-only: diff
           database: build
-          # The following value will only update a single comment
-          # in a pull request's thread. Set it to false to disable the comment.
-          # Set it to true to post a new comment (and delete the old comment).
           thread-comments: update
 
       - name: Fail fast?!
         if: steps.linter.outputs.checks-failed > 0
         run: exit 1
-        #echo "Some files failed the linting checks!"
-        #for actual deployment
-        # run: exit 1
